# Digital-Crystal-Equation-Solver

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
configs/: solver.default.toml
crates/digitalcrystal-engine/: Cargo.toml
crates/digitalcrystal-engine/src/: lib.rs  life_loop.rs
docs/: GITHUB_MILESTONES.md  LIFE_LOOP_API_EXAMPLES.md
docs/adr/: README.md
docs/findings/: HAFNIAN_FLUX_PHASE_TRANSITION_ATLAS_NOTE.md  HAFNIAN_FLUX_PROBE_ASYMMETRY_ISOLATION_NOTE.md  HAFNIAN_FLUX_PROBE_FINDING.md  HAFNIAN_FLUX_PROBE_INFERENCE_NOTE.md  HAFNIAN_FLUX_PROBE_SWEEP_FINDING.md  LOGIC_GEOMETRY_INVARIANTS_FRAMEWORK.md  LOGIC_GEOMETRY_WITNESS_CATALOG_NOTE.md  README.md  RH_COMPLETE_PROOF.md  RH_EQUIVALENT_STATEMENT_MAP_V0_1.md  RH_INDEPENDENT_REVIEW_PACKET_V0_1.md  RH_LEMMA_REGISTRY_V0_1.md  RH_PROOF_PROGRAM_V0_1.md  RH_THEOREM_CHAIN_V0_1.md
docs/releases/: v0.3.3-life-loop-v0.md
scripts/: hafnian_flux_asymmetry_sweep.py  hafnian_flux_inference.py  hafnian_flux_sweep.py  hafnian_flux_transition_inference.py  hafnian_flux_transition_sweep.py  logic_geometry_witness_catalog.py  rh_counterexample_attack.py  rh_counterexample_refine.py  rh_dipole_analysis.py  rh_dipole_triangulation.py  rh_functional_stress_map.py  rh_outcome_pinner.py  rh_proof_pipeline_status.py  rh_stability_ladder.py
specs/csif-guard/: CSIF_V2_CONFORMANCE_TEST_SPEC.md  CSIF_V2_ENGINE_SPEC.md  RWIF_V2_FIELD_SPEC.md  SEMANTIC_LAYER0_SPEC_V0_2.md  SPEC_TRANSFER_MANIFEST.md
(+33 files in other folders)
