[package]
name = "digitalcrystal-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
digitalcrystal-engine = { path = "../../crates/digitalcrystal-engine" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tower.workspace = true